--- a/index.html
+++ b/index.html
@@ -7,12 +7,8 @@
   <title>Glowing Dots</title>
 </head>
 <body>
-  <div class="app-body">
-    <div class="box">
-      <span></span>
-      <h2>Devslopes</h2>
-      <h3>Learn to Code</h3>
-    </div>
+  <div>
+    <h2>Heading</h2>
     <ul>
       <li></li>
       <li></li>
